Header and Slider Area

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fundo Template</title>
+	<title> Hablu | One Page Website</title>
 	<!-- FAVICON -->
 	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 	<!-- CSS INCLUDES -->
@@ -21,7 +21,82 @@
 </head>
 <body>
 	
+	<!-- HEADER START -->
+	<header class="header-transparent">
+		<div class="header-top  bg-dark">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<!-- NAVBAR START -->
+						<nav class="navbar navbar-expand-lg navbar-dark">
+							<a class="navbar-brand" href="index.html">Hablu</a>
+							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+							  <span class="navbar-toggler-icon"></span>
+							</button>
+							<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							  <ul class="navbar-nav ml-auto">
+								<li><a href="">home</a></li>
+								<li><a href="">about</a></li>
+								<li><a href="">services</a></li>
+								<li><a href="">projects</a></li>
+								<li><a href="">team</a></li>
+								<li><a href="">testimonials</a></li>
+								<li><a href="">blog</a></li>
+								<li><a href="">contact</a></li>
+							  </ul>
+							</div>
+						</nav>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<!-- HEADER END -->
 	
+	<main>
+		<!-- SLIDER START -->
+		<div class="slider-area owl-carousel">
+			<div class="single-slide d-flex align-items-center" data-background="assets/img/slide1.jpg">
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<div class="hslide text-center">
+								<div class="hslide__text">
+									<span>Welcome to Our Agency</span>
+									<h2>gain the beautiful result</h2>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis fuga suscipit? Beatae illum quis odit facilis laudantium magnam a culpa vero facere minus ducimus tempore tenetur adipisci praesentium deleniti quas voluptates eos, corporis eligendi laboriosam totam veritatis! Officiis, harum.</p>
+								</div>
+								<div class="hslide__btn">
+									<a href="" class="h-btn mr-30">Read More</a>
+									<a href="" class="h-btn btn-border">Learn More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="single-slide d-flex align-items-center" data-background="assets/img/slide1.jpg">
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<div class="hslide text-center">
+								<div class="hslide__text">
+									<span>Welcome to Our Agency</span>
+									<h2>gain the beautiful result</h2>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis fuga suscipit? Beatae illum quis odit facilis laudantium magnam a culpa vero facere minus ducimus tempore tenetur adipisci praesentium deleniti quas voluptates eos, corporis eligendi laboriosam totam veritatis! Officiis, harum.</p>
+								</div>
+								<div class="hslide__btn">
+									<a href="" class="h-btn mr-30">Read More</a>
+									<a href="" class="h-btn btn-border">Learn More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- SLIDER END -->
+	</main>
 
 
 
