section-title design

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 	<!-- HEADER START -->
 	<header class="header-transparent">
-		<div class="header-top  bg-dark">
+		<div class="header-top bg-dark">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
@@ -75,7 +75,26 @@
 					</div>
 				</div>
 			</div>
-			<div class="single-slide d-flex align-items-center" data-background="assets/img/slide1.jpg">
+			<div class="single-slide d-flex align-items-center" data-background="assets/img/slide2.jpg">
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<div class="hslide text-center">
+								<div class="hslide__text">
+									<span>Welcome to Our Agency</span>
+									<h2>gain the beautiful result</h2>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis fuga suscipit? Beatae illum quis odit facilis laudantium magnam a culpa vero facere minus ducimus tempore tenetur adipisci praesentium deleniti quas voluptates eos, corporis eligendi laboriosam totam veritatis! Officiis, harum.</p>
+								</div>
+								<div class="hslide__btn">
+									<a href="" class="h-btn mr-30">Read More</a>
+									<a href="" class="h-btn btn-border">Learn More</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="single-slide d-flex align-items-center" data-background="assets/img/slide3.jpg">
 				<div class="container">
 					<div class="row">
 						<div class="col-12">
@@ -96,6 +115,21 @@
 			</div>
 		</div>
 		<!-- SLIDER END -->
+		<!-- ABOUT START -->
+		<div class="about-area pt-120 pb-90">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="section-title text-center">
+							<span>What We Do</span>
+							<h2>About Us</h2>
+							<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem laudantium excepturi veniam at deserunt, <br> voluptatum reiciendis! Ab repudiandae ad commodi voluptatum et illo suscipit numquam voluptatem quas minus? Repellat, amet.	</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- ABOUT END -->
 	</main>
 
 
