--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 							</button>
 							<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							  <ul class="navbar-nav ml-auto">
-								<li><a href="">home</a></li>
-								<li><a href="">about</a></li>
-								<li><a href="">services</a></li>
-								<li><a href="">projects</a></li>
-								<li><a href="">team</a></li>
-								<li><a href="">testimonials</a></li>
-								<li><a href="">blog</a></li>
-								<li><a href="">contact</a></li>
+								<li><a href="#home">home</a></li>
+								<li><a href="#about">about</a></li>
+								<li><a href="#services">services</a></li>
+								<li><a href="#projects">projects</a></li>
+								<li><a href="#team">team</a></li>
+								<li><a href="#testimonial">testimonials</a></li>
+								<li><a href="#blog">blog</a></li>
+								<li><a href="#contact">contact</a></li>
 							  </ul>
 							</div>
 						</nav>
@@ -116,14 +116,81 @@
 		</div>
 		<!-- SLIDER END -->
 		<!-- ABOUT START -->
-		<div class="about-area pt-120 pb-90">
+		<div class="about-area pt-120 pb-90" id="about">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
-						<div class="section-title text-center">
+						<div class="section-title text-center mb-50">
 							<span>What We Do</span>
 							<h2>About Us</h2>
 							<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem laudantium excepturi veniam at deserunt, <br> voluptatum reiciendis! Ab repudiandae ad commodi voluptatum et illo suscipit numquam voluptatem quas minus? Repellat, amet.	</p>
+						</div>
+					</div>
+				</div>
+				<div class="habout">
+					<div class="row">
+						<div class="col-xl-6">
+							<div class="habout__content mb-30">
+								<h3>Welcome to Our Company</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias excepturi fugit iusto nostrum delectus. Perferendis molestiae asperiores labore consectetur. Voluptatibus debitis odit aliquam non voluptatum possimus repellat atque laudantium asperiores minima adipisci quod, soluta ab commodi, quas eaque aperiam provident?</p>
+								<div class="row">
+									<div class="col-xl-6">
+										<ul>
+											<li><i class="far fa-thumbs-up"></i> Awesome Design</li>
+											<li><i class="far fa-thumbs-up"></i> Better Client Service</li>
+											<li><i class="far fa-thumbs-up"></i> Creative Design</li>
+											<li><i class="far fa-thumbs-up"></i> Digital Marketing & Branding</li>
+										</ul>
+									</div>
+									<div class="col-xl-6">
+										<ul>
+											<li><i class="far fa-thumbs-up"></i> Awesome Design</li>
+											<li><i class="far fa-thumbs-up"></i> Better Client Service</li>
+											<li><i class="far fa-thumbs-up"></i> Creative Design</li>
+											<li><i class="far fa-thumbs-up"></i> Digital Marketing & Branding</li>
+										</ul>
+									</div>
+								</div>
+								<div class="habout__content-btn">
+									<a href="" class="h-btn">Read More</a>
+								</div>
+							</div>		
+						</div>
+						<div class="col-xl-6">
+							<div class="habout__img mb-30">
+								<img src="assets/img/about.jpg" alt="" class="img-fluid">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="ability mt-80">
+					<div class="row">
+						<div class="col-xl-4">
+							<div class="ability__single mb-30">
+								<h4>Mission</h4>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad vitae dolorum perspiciatis quidem quasi a! Aliquid!</p>
+								<div class="ability__single-btn">
+									<a href="">Read More <i class="fas fa-arrow-right"></i></a>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="ability__single mb-30">
+								<h4>Vision</h4>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad vitae dolorum perspiciatis quidem quasi a! Aliquid!</p>
+								<div class="ability__single-btn">
+									<a href="">Read More <i class="fas fa-arrow-right"></i></a>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="ability__single mb-30">
+								<h4>History</h4>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad vitae dolorum perspiciatis quidem quasi a! Aliquid!</p>
+								<div class="ability__single-btn">
+									<a href="">Read More <i class="fas fa-arrow-right"></i></a>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
