btn style change

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 									</div>
 								</div>
 								<div class="habout__content-btn">
-									<a href="" class="h-btn">Read More</a>
+									<a href="" class="h-btn a-btn">Read More</a>
 								</div>
 							</div>		
 						</div>
@@ -197,8 +197,6 @@
 			</div>
 		</div>
 		<!-- ABOUT END -->
-		<!-- DEMO START -->
-		<!-- DEMO END -->
 	</main>
 
 
