--- a/index.html
+++ b/index.html
@@ -197,6 +197,94 @@
 			</div>
 		</div>
 		<!-- ABOUT END -->
+		<!-- FEATURES START -->
+		<div class="features-area pt-120 pb-90 feature-1">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-xl-6">
+						<div class="section-title text-center mb-50">
+							<span>Highly Create Solutions</span>
+							<h2>We are Digital</h2>
+						</div>
+						<div class="row">
+							<div class="col-xl-6">
+								<div class="single-feature mb-30">
+									<i class="far fa-check-circle"></i>
+									<h3>Morden Design</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+								</div>
+							</div>
+							<div class="col-xl-6">
+								<div class="single-feature mb-30">
+									<i class="far fa-check-circle"></i>
+									<h3>Morden Design</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+								</div>
+							</div>
+							<div class="col-xl-6">
+								<div class="single-feature mb-30">
+									<i class="far fa-check-circle"></i>
+									<h3>Morden Design</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+								</div>
+							</div>
+							<div class="col-xl-6">
+								<div class="single-feature mb-30">
+									<i class="far fa-check-circle"></i>
+									<h3>Morden Design</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+								</div>
+							</div>
+						</div>
+					</div>
+						
+				</div>
+			</div>
+		</div>
+		<div class="features-area pt-120 pb-90 feature-2">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-xl-6 ml-auto">
+						<div class="section-title text-center mb-50">
+							<span>Highly Create Solutions</span>
+							<h2>We are Creative</h2>
+						</div>
+						<div class="row text-center">
+							<div class="col-xl-6">
+								<div class="single-feature mb-30">
+									<i class="far fa-check-circle"></i>
+									<h3>Morden Design</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+								</div>
+							</div>
+							<div class="col-xl-6">
+								<div class="single-feature mb-30">
+									<i class="far fa-check-circle"></i>
+									<h3>Morden Design</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+								</div>
+							</div>
+							<div class="col-xl-6">
+								<div class="single-feature mb-30">
+									<i class="far fa-check-circle"></i>
+									<h3>Morden Design</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+								</div>
+							</div>
+							<div class="col-xl-6">
+								<div class="single-feature mb-30">
+									<i class="far fa-check-circle"></i>
+									<h3>Morden Design</h3>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+								</div>
+							</div>
+						</div>
+					</div>
+						
+				</div>
+			</div>
+		</div>
+		<!-- FEATURES END -->
 	</main>
 
 
