--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,8 +20,9 @@
 	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="stylesheet" href="assets/css/responsive.css">
 </head>
+
 <body>
-	
+
 	<!-- HEADER START -->
 	<header class="header-transparent">
 		<div class="header-top bg-dark">
@@ -30,20 +32,22 @@
 						<!-- NAVBAR START -->
 						<nav class="navbar navbar-expand-lg navbar-dark">
 							<a class="navbar-brand" href="index.html">Hablu</a>
-							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-							  <span class="navbar-toggler-icon"></span>
+							<button class="navbar-toggler" type="button" data-toggle="collapse"
+								data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+								aria-expanded="false" aria-label="Toggle navigation">
+								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse" id="navbarSupportedContent">
-							  <ul class="navbar-nav ml-auto">
-								<li><a href="#home">home</a></li>
-								<li><a href="#about">about</a></li>
-								<li><a href="#services">services</a></li>
-								<li><a href="#projects">projects</a></li>
-								<li><a href="#team">team</a></li>
-								<li><a href="#testimonial">testimonials</a></li>
-								<li><a href="#blog">blog</a></li>
-								<li><a href="#contact">contact</a></li>
-							  </ul>
+								<ul class="navbar-nav ml-auto">
+									<li><a href="#home">home</a></li>
+									<li><a href="#about">about</a></li>
+									<li><a href="#services">services</a></li>
+									<li><a href="#projects">projects</a></li>
+									<li><a href="#team">team</a></li>
+									<li><a href="#testimonial">testimonials</a></li>
+									<li><a href="#blog">blog</a></li>
+									<li><a href="#contact">contact</a></li>
+								</ul>
 							</div>
 						</nav>
 					</div>
@@ -52,7 +56,7 @@
 		</div>
 	</header>
 	<!-- HEADER END -->
-	
+
 	<main>
 		<!-- SLIDER START -->
 		<div class="slider-area owl-carousel">
@@ -64,7 +68,11 @@
 								<div class="hslide__text">
 									<span>Welcome to Our Agency</span>
 									<h2>gain the beautiful result</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis fuga suscipit? Beatae illum quis odit facilis laudantium magnam a culpa vero facere minus ducimus tempore tenetur adipisci praesentium deleniti quas voluptates eos, corporis eligendi laboriosam totam veritatis! Officiis, harum.</p>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis
+										fuga suscipit? Beatae illum quis odit facilis laudantium magnam a culpa vero
+										facere minus ducimus tempore tenetur adipisci praesentium deleniti quas
+										voluptates eos, corporis eligendi laboriosam totam veritatis! Officiis, harum.
+									</p>
 								</div>
 								<div class="hslide__btn">
 									<a href="" class="h-btn mr-30">Read More</a>
@@ -83,7 +91,11 @@
 								<div class="hslide__text">
 									<span>Welcome to Our Agency</span>
 									<h2>gain the beautiful result</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis fuga suscipit? Beatae illum quis odit facilis laudantium magnam a culpa vero facere minus ducimus tempore tenetur adipisci praesentium deleniti quas voluptates eos, corporis eligendi laboriosam totam veritatis! Officiis, harum.</p>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis
+										fuga suscipit? Beatae illum quis odit facilis laudantium magnam a culpa vero
+										facere minus ducimus tempore tenetur adipisci praesentium deleniti quas
+										voluptates eos, corporis eligendi laboriosam totam veritatis! Officiis, harum.
+									</p>
 								</div>
 								<div class="hslide__btn">
 									<a href="" class="h-btn mr-30">Read More</a>
@@ -102,7 +114,11 @@
 								<div class="hslide__text">
 									<span>Welcome to Our Agency</span>
 									<h2>gain the beautiful result</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis fuga suscipit? Beatae illum quis odit facilis laudantium magnam a culpa vero facere minus ducimus tempore tenetur adipisci praesentium deleniti quas voluptates eos, corporis eligendi laboriosam totam veritatis! Officiis, harum.</p>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis
+										fuga suscipit? Beatae illum quis odit facilis laudantium magnam a culpa vero
+										facere minus ducimus tempore tenetur adipisci praesentium deleniti quas
+										voluptates eos, corporis eligendi laboriosam totam veritatis! Officiis, harum.
+									</p>
 								</div>
 								<div class="hslide__btn">
 									<a href="" class="h-btn mr-30">Read More</a>
@@ -123,7 +139,9 @@
 						<div class="section-title text-center mb-50">
 							<span>What We Do</span>
 							<h2>About Us</h2>
-							<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem laudantium excepturi veniam at deserunt, <br> voluptatum reiciendis! Ab repudiandae ad commodi voluptatum et illo suscipit numquam voluptatem quas minus? Repellat, amet.	</p>
+							<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem laudantium excepturi
+								veniam at deserunt, <br> voluptatum reiciendis! Ab repudiandae ad commodi voluptatum et
+								illo suscipit numquam voluptatem quas minus? Repellat, amet. </p>
 						</div>
 					</div>
 				</div>
@@ -132,7 +150,10 @@
 						<div class="col-xl-6">
 							<div class="habout__content mb-30">
 								<h3>Welcome to Our Company</h3>
-								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias excepturi fugit iusto nostrum delectus. Perferendis molestiae asperiores labore consectetur. Voluptatibus debitis odit aliquam non voluptatum possimus repellat atque laudantium asperiores minima adipisci quod, soluta ab commodi, quas eaque aperiam provident?</p>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias excepturi fugit iusto
+									nostrum delectus. Perferendis molestiae asperiores labore consectetur. Voluptatibus
+									debitis odit aliquam non voluptatum possimus repellat atque laudantium asperiores
+									minima adipisci quod, soluta ab commodi, quas eaque aperiam provident?</p>
 								<div class="row">
 									<div class="col-xl-6">
 										<ul>
@@ -154,7 +175,7 @@
 								<div class="habout__content-btn">
 									<a href="" class="h-btn a-btn">Read More</a>
 								</div>
-							</div>		
+							</div>
 						</div>
 						<div class="col-xl-6">
 							<div class="habout__img mb-30">
@@ -168,7 +189,8 @@
 						<div class="col-xl-4">
 							<div class="ability__single mb-30">
 								<h4>Mission</h4>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad vitae dolorum perspiciatis quidem quasi a! Aliquid!</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad
+									vitae dolorum perspiciatis quidem quasi a! Aliquid!</p>
 								<div class="ability__single-btn">
 									<a href="">Read More <i class="fas fa-arrow-right"></i></a>
 								</div>
@@ -177,7 +199,8 @@
 						<div class="col-xl-4">
 							<div class="ability__single mb-30">
 								<h4>Vision</h4>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad vitae dolorum perspiciatis quidem quasi a! Aliquid!</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad
+									vitae dolorum perspiciatis quidem quasi a! Aliquid!</p>
 								<div class="ability__single-btn">
 									<a href="">Read More <i class="fas fa-arrow-right"></i></a>
 								</div>
@@ -186,7 +209,8 @@
 						<div class="col-xl-4">
 							<div class="ability__single mb-30">
 								<h4>History</h4>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad vitae dolorum perspiciatis quidem quasi a! Aliquid!</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure saepe error ad
+									vitae dolorum perspiciatis quidem quasi a! Aliquid!</p>
 								<div class="ability__single-btn">
 									<a href="">Read More <i class="fas fa-arrow-right"></i></a>
 								</div>
@@ -211,33 +235,37 @@
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam
+										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
 							<div class="col-xl-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam
+										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
 							<div class="col-xl-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam
+										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
 							<div class="col-xl-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam
+										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
 						</div>
 					</div>
-						
+
 				</div>
 			</div>
 		</div>
@@ -254,37 +282,110 @@
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam
+										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
 							<div class="col-xl-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam
+										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
 							<div class="col-xl-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam
+										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
 							<div class="col-xl-6">
 								<div class="single-feature mb-30">
 									<i class="far fa-check-circle"></i>
 									<h3>Morden Design</h3>
-									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
+									<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione nemo veniam
+										natus alias recusandae nihil qui incidunt repellendus facilis tempore!</p>
 								</div>
 							</div>
 						</div>
 					</div>
-						
+
 				</div>
 			</div>
 		</div>
 		<!-- FEATURES END -->
+		<!-- SERVICES START -->
+		<div class="services-area pt-120 pb-90">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="section-title text-center mb-50">
+							<span>try to provide the best solutions</span>
+							<h2>Our Services</h2>
+							<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem laudantium excepturi
+								veniam at deserunt, <br> voluptatum reiciendis! Ab repudiandae ad commodi voluptatum et
+								illo suscipit numquam voluptatem quas minus? Repellat, amet. </p>
+						</div>
+					</div>
+				</div>
+				<div class="services mt-40">
+					<div class="row">
+						<div class="col-xl-4">
+							<div class="services__single mb-30">
+								<i class="fal fa-newspaper"></i>
+								<h3>web solutions</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga modi a rem eum,
+									perferendis voluptates. </p>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="services__single mb-30">
+								<i class="far fa-globe-asia"></i>
+								<h3>web Security</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga modi a rem eum,
+									perferendis voluptates. </p>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="services__single mb-30">
+								<i class="fal fa-band-aid"></i>
+								<h3>web solutions</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga modi a rem eum,
+									perferendis voluptates. </p>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="services__single mb-30">
+								<i class="fad fa-mobile"></i>
+								<h3>web solutions</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga modi a rem eum,
+									perferendis voluptates. </p>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="services__single mb-30">
+								<i class="fad fa-search-location"></i>
+								<h3>web solutions</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga modi a rem eum,
+									perferendis voluptates. </p>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="services__single mb-30">
+								<i class="fal fa-chart-line-down"></i>
+								<h3>web solutions</h3>
+								<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga modi a rem eum,
+									perferendis voluptates. </p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>	
+		<!-- SERVICES END -->
 	</main>
 
 
@@ -303,4 +404,5 @@
 	<script src="assets/js/slick.min.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
+
 </html>
