--- a/index.html
+++ b/index.html
@@ -386,6 +386,47 @@
 			</div>
 		</div>	
 		<!-- SERVICES END -->
+		<!-- WORK PROCESS START -->
+		<div class="process-area pt-60 pb-30" data-background="assets/img/process-back.jpg">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="section-title-white text-center mb-50">
+							<span>Organized & Properly</span>
+							<h2>our work process</h2>
+							<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xl-3">
+						<div class="single-process mb-30">
+							<h3>Design <span>1</span></h3>
+							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Tenetur, explicabo.</p>
+						</div>
+					</div>
+					<div class="col-xl-3">
+						<div class="single-process mb-30">
+							<h3>Development <span>2</span></h3>
+							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Tenetur, explicabo.</p>
+						</div>
+					</div>
+					<div class="col-xl-3">
+						<div class="single-process mb-30">
+							<h3>Testing <span>3</span></h3>
+							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Tenetur, explicabo.</p>
+						</div>
+					</div>
+					<div class="col-xl-3">
+						<div class="single-process mb-30">
+							<h3>Final <span>1</span></h3>
+							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>   Tenetur, explicabo.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- WORK PROCESS END -->
 	</main>
 
 
