--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 		</div>
 		<!-- FEATURES END -->
 		<!-- SERVICES START -->
-		<div class="services-area pt-120 pb-90">
+		<div class="services-area pt-120 pb-90" id="services">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
@@ -384,7 +384,7 @@
 					</div>
 				</div>
 			</div>
-		</div>	
+		</div>
 		<!-- SERVICES END -->
 		<!-- WORK PROCESS START -->
 		<div class="process-area pt-60 pb-30" data-background="assets/img/process-back.jpg">
@@ -420,13 +420,104 @@
 					<div class="col-xl-3">
 						<div class="single-process mb-30">
 							<h3>Final <span>1</span></h3>
-							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>   Tenetur, explicabo.</p>
+							<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Tenetur, explicabo.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<!-- WORK PROCESS END -->
+		<!-- PROJECTS START -->
+		<div class="project-area pt-120 pb-90" id="projects">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="section-title text-center mb-50">
+							<span>What we do</span>
+							<h2>latest project</h2>
+							<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+						</div>
+					</div>
+				</div>
+				<div class="projects">
+					<div class="row no-gutters">
+						<div class="col-xl-4">
+							<div class="projects__item">
+								<img src="assets/img/project1.jpg" alt="project-1">
+								<div class="projects__item-overlay">
+									<div class="projects__item-overlay-content">
+										<a href="assets/img/project1.jpg" class="project-popup"><i
+												class="fad fa-search-plus"></i></a>
+										<h3>project title <span>branding</span></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="projects__item">
+								<img src="assets/img/project2.jpg" alt="project-2">
+								<div class="projects__item-overlay">
+									<div class="projects__item-overlay-content">
+										<a href="assets/img/project2.jpg" class="project-popup"><i
+												class="fad fa-search-plus"></i></a>
+										<h3>project title <span>branding</span></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="projects__item">
+								<img src="assets/img/project3.jpg" alt="project-3">
+								<div class="projects__item-overlay">
+									<div class="projects__item-overlay-content">
+										<a href="assets/img/project3.jpg" class="project-popup"><i
+												class="fad fa-search-plus"></i></a>
+										<h3>project title <span>branding</span></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="projects__item">
+								<img src="assets/img/project4.jpg" alt="project-4">
+								<div class="projects__item-overlay">
+									<div class="projects__item-overlay-content">
+										<a href="assets/img/project4.jpg" class="project-popup"><i
+												class="fad fa-search-plus"></i></a>
+										<h3>project title <span>branding</span></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="projects__item">
+								<img src="assets/img/project5.jpg" alt="project-5">
+								<div class="projects__item-overlay">
+									<div class="projects__item-overlay-content">
+										<a href="assets/img/project5.jpg" class="project-popup"><i
+												class="fad fa-search-plus"></i></a>
+										<h3>project title <span>branding</span></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="projects__item">
+								<img src="assets/img/project6.jpg" alt="project-6">
+								<div class="projects__item-overlay">
+									<div class="projects__item-overlay-content">
+										<a href="assets/img/project6.jpg" class="project-popup"><i
+												class="fad fa-search-plus"></i></a>
+										<h3>project title <span>branding</span></h3>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- PROJECTS END -->
 	</main>
 
 
