counter plugin apply to counter area

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 		</div>
 	</header>
 	<!-- HEADER END -->
-
 	<main>
 		<!-- SLIDER START -->
 		<div class="slider-area owl-carousel">
@@ -428,7 +427,7 @@
 		</div>
 		<!-- WORK PROCESS END -->
 		<!-- PROJECTS START -->
-		<div class="project-area pt-120 pb-90" id="projects">
+		<div class="project-area pt-120 pb-120" id="projects">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
@@ -518,6 +517,42 @@
 			</div>
 		</div>
 		<!-- PROJECTS END -->
+		<!-- COUNTER START -->
+		<div class="counter-area pt-120 pb-90">
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-3">
+						<div class="single-counter mb-30">
+							<i class="fas fa-briefcase"></i>
+							<span class="counter">543</span>
+							<h4>projects</h4>
+						</div>
+					</div>
+					<div class="col-xl-3">
+						<div class="single-counter mb-30">
+							<i class="fal fa-award"></i>
+							<span class="counter">79</span>
+							<h4>Awards</h4>
+						</div>
+					</div>
+					<div class="col-xl-3">
+						<div class="single-counter mb-30">
+							<i class="fal fa-users"></i>
+							<span class="counter">79</span>
+							<h4>clients</h4>
+						</div>
+					</div>
+					<div class="col-xl-3">
+						<div class="single-counter mb-30">
+							<i class="fal fa-coffee"></i>
+							<span class="counter">4120</span>
+							<h4>cup of coffees</h4>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- COUNTER END -->
 	</main>
 
 
@@ -527,6 +562,8 @@
 	<!-- JS INCLUDES -->
 	<script src="assets/js/vendor/jquery-3.5.1.min.js"></script>
 	<script src="assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="assets/js/jquery.waypoints.min.js"></script>
+	<script src="assets/js/jquery.counterup.min.js"></script>
 	<script src="assets/js/jquery.meanmenu.min.js"></script>
 	<script src="assets/js/jquery.scrollUp.min.js"></script>
 	<script src="assets/js/bootstrap.bundle.min.js"></script>
