--- a/index.html
+++ b/index.html
@@ -553,9 +553,50 @@
 			</div>
 		</div>
 		<!-- COUNTER END -->
+		<!-- TEAM START -->
+		<div class="team-area pt-120 pb-90" id="team">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="section-title text-center mb-50">
+							<span>dedicated for your services</span>
+							<h2>our team</h2>
+							<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+						</div>
+					</div>
+				</div>
+				<div class="teamMembers">
+					<div class="row">
+						<div class="col-xl-4">
+							<div class="teamMembers__item mb-30">
+								<img src="assets/img/team1.jpg" alt="img-1">
+								<div class="teamMembers__item-overlay">
+									<h3>Jone Doe <span>Web Developer</span></h3>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="teamMembers__item mb-30">
+								<img src="assets/img/team2.jpg" alt="img-1">
+								<div class="teamMembers__item-overlay">
+									<h3>Jone Doe <span>Web Developer</span></h3>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="teamMembers__item mb-30">
+								<img src="assets/img/team3.jpg" alt="img-1">
+								<div class="teamMembers__item-overlay">
+									<h3>Jone Doe <span>Web Developer</span></h3>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- TEAM END -->
 	</main>
-
-
 
 
 
