video popup done

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 		</div>
 		<!-- PROJECTS END -->
 		<!-- COUNTER START -->
-		<div class="counter-area pt-120 pb-90">
+		<div class="counter-area black-bg pt-100 pb-70">
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-3">
@@ -596,6 +596,21 @@
 			</div>
 		</div>
 		<!-- TEAM END -->
+		<!-- CALL TO ACTION  START-->
+		<div class="video-area black-bg pt-80 pb-80">
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-7 mx-auto">
+						<div class="video-content text-center">
+							<a href="https://www.youtube.com/watch?v=-Cqmbb6pAWs" class="popup-video"><i class="fas fa-play"></i></a>
+							<h2>We are working</h2>
+							<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nostrum sint nobis, illum, nesciunt maxime sed asperiores laboriosam eos cum repellendus laudantium corrupti id est tenetur natus numquam ducimus neque. Iusto, excepturi voluptatem! Similique tempore suscipit corrupti quae hic tempora!</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- CALL TO ACTION  END-->
 	</main>
 
 
