--- a/index.html
+++ b/index.html
@@ -611,6 +611,73 @@
 			</div>
 		</div>
 		<!-- CALL TO ACTION  END-->
+		<!-- PRICES AREA START -->
+		<div class="prices-area pt-120 pb-90">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="section-title text-center mb-50">
+							<span>cheap rate but quality</span>
+							<h2>our prices</h2>
+							<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+						</div>
+					</div>
+				</div>
+				<div class="prices">
+					<div class="row">
+						<div class="col-xl-4">
+							<div class="prices__item">
+								<span>standard</span>
+								<h3>$25 <span>month</span></h3>
+								<ul>
+									<li>100GB monthly bandwidth</li>
+									<li>100GB google adwords</li>
+									<li>100 domain hosting</li>
+									<li>SSL shoping cart</li>
+									<li>24/7 live support</li>
+									<div class="prices__item-btn">
+										<a href="" class="h-btn">purchase now</a>	
+									</div>
+								</ul>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="prices__item featured">
+								<span>premium</span>
+								<h3>$25 <span>month</span></h3>
+								<ul>
+									<li>100GB monthly bandwidth</li>
+									<li>100GB google adwords</li>
+									<li>100 domain hosting</li>
+									<li>SSL shoping cart</li>
+									<li>24/7 live support</li>
+									<div class="prices__item-btn">
+										<a href="" class="h-btn">purchase now</a>	
+									</div>
+								</ul>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="prices__item">
+								<span>stller plus</span>
+								<h3>$25 <span>month</span></h3>
+								<ul>
+									<li>100GB monthly bandwidth</li>
+									<li>100GB google adwords</li>
+									<li>100 domain hosting</li>
+									<li>SSL shoping cart</li>
+									<li>24/7 live support</li>
+									<div class="prices__item-btn">
+										<a href="" class="h-btn">purchase now</a>	
+									</div>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- PRICES AREA END -->
 	</main>
 
 
