--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 		</div>
 		<!-- SERVICES END -->
 		<!-- WORK PROCESS START -->
-		<div class="process-area pt-60 pb-30" data-background="assets/img/process-back.jpg">
+		<div class="process-area pt-60 pb-30" data-background="assets/img/process-back.jpg" data-overlay="dark" data-opacity="8">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
@@ -678,6 +678,132 @@
 			</div>
 		</div>
 		<!-- PRICES AREA END -->
+		<!-- TESTIMONIAL START -->
+		<div class="testimonial-area pt-120 pb-120" id="testimonial" data-background="assets/img/cta-bg.jpg" data-overlay="dark" data-opacity="8">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="section-title-white text-center mb-50">
+							<span>review from clients</span>
+							<h2>what client says</h2>
+							<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xl-10 mx-auto">
+						<div class="testimonials owl-carousel">
+							<div class="testimonials__author">
+								<i class="fas fa-quote-left"></i>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus, nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
+								<div class="testimonials__author-info">
+									<img src="assets/img/client1.png" alt="client-1">
+									<h4>John Doe <span>web developer</span></h4>
+								</div>
+							</div>
+							<div class="testimonials__author">
+								<i class="fas fa-quote-left"></i>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus, nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
+								<div class="testimonials__author-info">
+									<img src="assets/img/client2.png" alt="client-1">
+									<h4>Md. Sujan Ahmed <span>Front-End-Designer</span></h4>
+								</div>
+							</div>
+							<div class="testimonials__author">
+								<i class="fas fa-quote-left"></i>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus, nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
+								<div class="testimonials__author-info">
+									<img src="assets/img/client3.png" alt="client-1">
+									<h4>Mahbuba Sultana <span>Content Writer</span></h4>
+								</div>
+							</div>
+							<div class="testimonials__author">
+								<i class="fas fa-quote-left"></i>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus, nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
+								<div class="testimonials__author-info">
+									<img src="assets/img/client1.png" alt="client-1">
+									<h4>Maliha Binte <span>Branding Designer</span></h4>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- TESTIMONIAL END -->
+		<!-- LATEST BLOG START -->
+		<div class="blog-area pt-120 pb-90" id="blog">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="section-title text-center mb-50">
+							<span>honesty and perfect timing</span>
+							<h2>latest news</h2>
+							<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+						</div>
+					</div>
+				</div>
+				<div class="blogs">
+					<div class="row">
+						<div class="col-xl-4">
+							<div class="blogs__item">
+								<div class="blogs__item-img">
+									<img src="assets/img/blog1.jpg" alt="blog-1">
+								</div>
+								<div class="blogs__item-meta">
+									<a href=""><i class="far fa-user"></i> Admin</a>
+									<a href=""><i class="fal fa-comments"></i> Comments</a>
+								</div>
+								<div class="blogs__item-content">
+									<h5>blog title 1</h5>
+									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+									<div class="blogs__item-content-btn">
+										<a href="">Read More <i class="fas fa-arrow-right"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="blogs__item">
+								<div class="blogs__item-img">
+									<img src="assets/img/blog2.jpg" alt="blog-2">
+								</div>
+								<div class="blogs__item-meta">
+									<a href=""><i class="far fa-user"></i> Admin</a>
+									<a href=""><i class="fal fa-comments"></i> Comments</a>
+								</div>
+								<div class="blogs__item-content">
+									<h5>blog title 2</h5>
+									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+									<div class="blogs__item-content-btn">
+										<a href="">Read More <i class="fas fa-arrow-right"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4">
+							<div class="blogs__item">
+								<div class="blogs__item-img">
+									<img src="assets/img/blog3.jpg" alt="blog-3">
+								</div>
+								<div class="blogs__item-meta">
+									<a href=""><i class="far fa-user"></i> Admin</a>
+									<a href=""><i class="fal fa-comments"></i> Comments</a>
+								</div>
+								<div class="blogs__item-content">
+									<h5>blog title 3</h5>
+									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+									<div class="blogs__item-content-btn">
+										<a href="">Read More <i class="fas fa-arrow-right"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- LATEST BLOG END -->
 	</main>
 
 
