--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 	<!-- HEADER START -->
-	<header class="header-transparent">
+	<header class="header-transparent" id="home">
 		<div class="header-top bg-dark">
 			<div class="container">
 				<div class="row">
@@ -386,7 +386,8 @@
 		</div>
 		<!-- SERVICES END -->
 		<!-- WORK PROCESS START -->
-		<div class="process-area pt-60 pb-30" data-background="assets/img/process-back.jpg" data-overlay="dark" data-opacity="8">
+		<div class="process-area pt-60 pb-30" data-background="assets/img/process-back.jpg" data-overlay="dark"
+			data-opacity="8">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
@@ -602,9 +603,13 @@
 				<div class="row">
 					<div class="col-xl-7 mx-auto">
 						<div class="video-content text-center">
-							<a href="https://www.youtube.com/watch?v=-Cqmbb6pAWs" class="popup-video"><i class="fas fa-play"></i></a>
+							<a href="https://www.youtube.com/watch?v=-Cqmbb6pAWs" class="popup-video"><i
+									class="fas fa-play"></i></a>
 							<h2>We are working</h2>
-							<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nostrum sint nobis, illum, nesciunt maxime sed asperiores laboriosam eos cum repellendus laudantium corrupti id est tenetur natus numquam ducimus neque. Iusto, excepturi voluptatem! Similique tempore suscipit corrupti quae hic tempora!</p>
+							<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga nostrum sint nobis, illum,
+								nesciunt maxime sed asperiores laboriosam eos cum repellendus laudantium corrupti id est
+								tenetur natus numquam ducimus neque. Iusto, excepturi voluptatem! Similique tempore
+								suscipit corrupti quae hic tempora!</p>
 						</div>
 					</div>
 				</div>
@@ -636,7 +641,7 @@
 									<li>SSL shoping cart</li>
 									<li>24/7 live support</li>
 									<div class="prices__item-btn">
-										<a href="" class="h-btn">purchase now</a>	
+										<a href="" class="h-btn">purchase now</a>
 									</div>
 								</ul>
 							</div>
@@ -652,7 +657,7 @@
 									<li>SSL shoping cart</li>
 									<li>24/7 live support</li>
 									<div class="prices__item-btn">
-										<a href="" class="h-btn">purchase now</a>	
+										<a href="" class="h-btn">purchase now</a>
 									</div>
 								</ul>
 							</div>
@@ -668,7 +673,7 @@
 									<li>SSL shoping cart</li>
 									<li>24/7 live support</li>
 									<div class="prices__item-btn">
-										<a href="" class="h-btn">purchase now</a>	
+										<a href="" class="h-btn">purchase now</a>
 									</div>
 								</ul>
 							</div>
@@ -679,7 +684,8 @@
 		</div>
 		<!-- PRICES AREA END -->
 		<!-- TESTIMONIAL START -->
-		<div class="testimonial-area pt-120 pb-120" id="testimonial" data-background="assets/img/cta-bg.jpg" data-overlay="dark" data-opacity="8">
+		<div class="testimonial-area pt-120 pb-120" id="testimonial" data-background="assets/img/cta-bg.jpg"
+			data-overlay="dark" data-opacity="8">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
@@ -695,7 +701,9 @@
 						<div class="testimonials owl-carousel">
 							<div class="testimonials__author">
 								<i class="fas fa-quote-left"></i>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus, nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam
+									delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus,
+									nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
 								<div class="testimonials__author-info">
 									<img src="assets/img/client1.png" alt="client-1">
 									<h4>John Doe <span>web developer</span></h4>
@@ -703,7 +711,9 @@
 							</div>
 							<div class="testimonials__author">
 								<i class="fas fa-quote-left"></i>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus, nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam
+									delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus,
+									nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
 								<div class="testimonials__author-info">
 									<img src="assets/img/client2.png" alt="client-1">
 									<h4>Md. Sujan Ahmed <span>Front-End-Designer</span></h4>
@@ -711,7 +721,9 @@
 							</div>
 							<div class="testimonials__author">
 								<i class="fas fa-quote-left"></i>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus, nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam
+									delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus,
+									nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
 								<div class="testimonials__author-info">
 									<img src="assets/img/client3.png" alt="client-1">
 									<h4>Mahbuba Sultana <span>Content Writer</span></h4>
@@ -719,7 +731,9 @@
 							</div>
 							<div class="testimonials__author">
 								<i class="fas fa-quote-left"></i>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus, nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam
+									delectus ducimus assumenda cupiditate quasi maiores eveniet perspiciatis doloribus,
+									nemo, iusto at sapiente est earum, quisquam accusamus modi enim minima!</p>
 								<div class="testimonials__author-info">
 									<img src="assets/img/client1.png" alt="client-1">
 									<h4>Maliha Binte <span>Branding Designer</span></h4>
@@ -756,7 +770,8 @@
 								</div>
 								<div class="blogs__item-content">
 									<h5>blog title 1</h5>
-									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
+										voluptatibus?</p>
 									<div class="blogs__item-content-btn">
 										<a href="">Read More <i class="fas fa-arrow-right"></i></a>
 									</div>
@@ -774,7 +789,8 @@
 								</div>
 								<div class="blogs__item-content">
 									<h5>blog title 2</h5>
-									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
+										voluptatibus?</p>
 									<div class="blogs__item-content-btn">
 										<a href="">Read More <i class="fas fa-arrow-right"></i></a>
 									</div>
@@ -792,7 +808,8 @@
 								</div>
 								<div class="blogs__item-content">
 									<h5>blog title 3</h5>
-									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
+										voluptatibus?</p>
 									<div class="blogs__item-content-btn">
 										<a href="">Read More <i class="fas fa-arrow-right"></i></a>
 									</div>
@@ -804,6 +821,74 @@
 			</div>
 		</div>
 		<!-- LATEST BLOG END -->
+		<!-- SUBSCRIBE START -->
+		<div class="subscribe-area pt-80 pb-30" data-background="assets/img/process-back.jpg" data-overlay="dark"
+		data-opacity="8">
+			<div class="container">
+				<div class="row">
+					<div class="col-7 mx-auto">
+						<div class="section-title-white text-center mb-50">
+							<span>we don't spam you</span>
+							<h2>subscribe now</h2>
+							<form action="">
+								<input type="text" name="" id="" placeholder="Enter your Email">
+								<input type="submit" value="subscribe">
+							</form>
+						</div>
+					</div>
+				</div>
+				
+			</div>
+		</div>
+		<!-- SUBSCRIBE END -->
+		<!-- CONTACT START -->
+		<div class="contact-area pt-120 pb-90">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="section-title text-center mb-50">
+							<span>24/7 services</span>
+							<h2>contact us</h2>
+							<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, voluptatibus?</p>
+						</div>
+					</div>
+				</div>
+				<div class="contacts">
+					<div class="row">
+						<div class="col-xl-6">
+							<div class="contacts__social">
+								<i class="fal fa-map-marker-alt"></i>
+								<h4>address <span>Flotowstr. 5006284 Lutherstadt Eisleben</span></h4>
+							</div>
+							<div class="contacts__social">
+								<i class="far fa-phone-alt"></i>
+								<h4>phone <span>123 456 789</span></h4>
+							</div>
+							<div class="contacts__social">
+								<i class="far fa-envelope"></i>
+								<h4>email <span>MaryRWashington@jourrapide.com</span></h4>
+							</div>
+							<div class="contacts__social">
+								<i class="fal fa-globe-asia"></i>
+								<h4>website <span>ProgramLocal.de</span></h4>
+							</div>
+						</div>
+						<div class="col-xl-6">
+							<div class="contacts__form">
+								<form action="">
+									<input type="text" name="" id="" placeholder="Name">
+									<input type="email" name="" id="" placeholder="Email">
+									<input type="text" name="" id="" placeholder="Subject">
+									<textarea name="" id="" placeholder="Message"></textarea>
+									<input type="submit" value="Send">
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- CONTACT END -->
 	</main>
 
 
