Footer area done

--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
 		<!-- LATEST BLOG END -->
 		<!-- SUBSCRIBE START -->
 		<div class="subscribe-area pt-80 pb-30" data-background="assets/img/process-back.jpg" data-overlay="dark"
-		data-opacity="8">
+			data-opacity="8">
 			<div class="container">
 				<div class="row">
 					<div class="col-7 mx-auto">
@@ -837,7 +837,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
 		<!-- SUBSCRIBE END -->
@@ -889,7 +889,42 @@
 			</div>
 		</div>
 		<!-- CONTACT END -->
+		<!-- CLIENT AREA START -->
+		<div class="client-area">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="client-branding owl-carousel">
+							<img src="assets/img/brand1.png" alt="brand1">
+							<img src="assets/img/brand2.png" alt="brand2">
+							<img src="assets/img/brand3.png" alt="brand3">
+							<img src="assets/img/brand4.png" alt="brand4">
+							<img src="assets/img/brand5.png" alt="brand5">
+							<img src="assets/img/brand6.png" alt="brand6">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- CLIENT AREA END -->
 	</main>
+	<!-- FOOTER START -->
+	<footer class="footer-area black-bg pt-30 pb-30 text-center">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="social-links">
+						<a href=""><i class="fab fa-facebook-f"></i></a>
+						<a href=""><i class="fab fa-twitter"></i></a>
+						<a href=""><i class="fab fa-linkedin-in"></i></a>
+						<a href=""><i class="fab fa-github-alt"></i></a>
+					</div>
+					<p>&copy; All Right Reserved 2021, Designed By md.sujon ahmed</p>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- FOOTER END -->
 
 
 
