--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								<span class="navbar-toggler-icon"></span>
 							</button>
 							<div class="collapse navbar-collapse" id="navbarSupportedContent">
-								<ul class="navbar-nav ml-auto">
+								<ul class="navbar-nav ml-auto" id="nav">
 									<li><a href="#home">home</a></li>
 									<li><a href="#about">about</a></li>
 									<li><a href="#services">services</a></li>
@@ -842,7 +842,7 @@
 		</div>
 		<!-- SUBSCRIBE END -->
 		<!-- CONTACT START -->
-		<div class="contact-area pt-120 pb-90">
+		<div class="contact-area pt-120 pb-90" id="contact">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
@@ -940,6 +940,7 @@
 	<script src="assets/js/wow.min.js"></script>
 	<script src="assets/js/ajax-form.js"></script>
 	<script src="assets/js/slick.min.js"></script>
+	<script src="assets/js/jquery.nav.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 
