CSS Section Name and decoration

--- a/index.html
+++ b/index.html
@@ -2,22 +2,33 @@
 <html lang="en">
 
 <head>
+	<!-- META CHARSET -->
 	<meta charset="UTF-8">
+	<!-- META VIEWPORT -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- TITLE -->
 	<title> Hablu | One Page Website</title>
 	<!-- FAVICON -->
 	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-	<!-- CSS INCLUDES -->
+	<!-- SLICK CSS -->
 	<link rel="stylesheet" href="assets/css/slick.css">
 	<link rel="stylesheet" href="assets/css/slick-theme.css">
+	<!-- OWL-CAROUSEL CSS -->
 	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+	<!-- MAGNIFIC POPUP CSS -->
 	<link rel="stylesheet" href="assets/css/magnific-popup.css">
+	<!-- ANIMATED CSS -->
 	<link rel="stylesheet" href="assets/css/animate.min.css">
+	<!-- FONTAWESOME CSS -->
 	<link rel="stylesheet" href="assets/css/fontawesome.min.css">
+	<!-- MEANMENU CSS -->
 	<link rel="stylesheet" href="assets/css/meanmenu.min.css">
+	<!-- BOOTSRAP CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<!-- MAIN CSS -->
 	<link rel="stylesheet" href="assets/css/main.css">
+	<!-- RESPONSIVE CSS -->
 	<link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 
@@ -928,19 +939,31 @@
 
 
 
-	<!-- JS INCLUDES -->
+	<!-- JQUERY LIBRARY -->
 	<script src="assets/js/vendor/jquery-3.5.1.min.js"></script>
+	<!-- MAGNIFIC POPUP JS -->
 	<script src="assets/js/jquery.magnific-popup.min.js"></script>
+	<!-- WAYPOINT JS -->
 	<script src="assets/js/jquery.waypoints.min.js"></script>
+	<!-- COUNTER JS -->
 	<script src="assets/js/jquery.counterup.min.js"></script>
+	<!-- MEANMENU JS -->
 	<script src="assets/js/jquery.meanmenu.min.js"></script>
+	<!-- SCROLLUP JS -->
 	<script src="assets/js/jquery.scrollUp.min.js"></script>
+	<!-- BOOTSTRAP BUNDLE JS -->
 	<script src="assets/js/bootstrap.bundle.min.js"></script>
+	<!-- OWL-CAROUSEL JS -->
 	<script src="assets/js/owl.carousel.min.js"></script>
+	<!-- WOW JS -->
 	<script src="assets/js/wow.min.js"></script>
+	<!-- AJAX JS -->
 	<script src="assets/js/ajax-form.js"></script>
+	<!-- SLICK JS -->
 	<script src="assets/js/slick.min.js"></script>
+	<!-- ONEPAGE NAV JS -->
 	<script src="assets/js/jquery.nav.js"></script>
+	<!-- MAIN JS -->
 	<script src="assets/js/main.js"></script>
 </body>
 
