--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
 	<!-- META CHARSET -->
@@ -651,10 +651,10 @@
 									<li>100 domain hosting</li>
 									<li>SSL shoping cart</li>
 									<li>24/7 live support</li>
-									<div class="prices__item-btn">
-										<a href="" class="h-btn">purchase now</a>
-									</div>
 								</ul>
+								<div class="prices__item-btn">
+									<a href="#" class="h-btn">purchase now</a>
+								</div>
 							</div>
 						</div>
 						<div class="col-xl-4">
@@ -667,10 +667,10 @@
 									<li>100 domain hosting</li>
 									<li>SSL shoping cart</li>
 									<li>24/7 live support</li>
-									<div class="prices__item-btn">
-										<a href="" class="h-btn">purchase now</a>
-									</div>
 								</ul>
+								<div class="prices__item-btn">
+									<a href="#" class="h-btn">purchase now</a>
+								</div>
 							</div>
 						</div>
 						<div class="col-xl-4">
@@ -683,10 +683,10 @@
 									<li>100 domain hosting</li>
 									<li>SSL shoping cart</li>
 									<li>24/7 live support</li>
-									<div class="prices__item-btn">
-										<a href="" class="h-btn">purchase now</a>
-									</div>
 								</ul>
+								<div class="prices__item-btn">
+									<a href="#" class="h-btn">purchase now</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -841,8 +841,8 @@
 						<div class="section-title-white text-center mb-50">
 							<span>we don't spam you</span>
 							<h2>subscribe now</h2>
-							<form action="">
-								<input type="text" name="" id="" placeholder="Enter your Email">
+							<form action="#">
+								<input type="text" name="email" id="email" placeholder="Enter your Email">
 								<input type="submit" value="subscribe">
 							</form>
 						</div>
@@ -886,11 +886,11 @@
 						</div>
 						<div class="col-xl-6">
 							<div class="contacts__form">
-								<form action="">
-									<input type="text" name="" id="" placeholder="Name">
-									<input type="email" name="" id="" placeholder="Email">
-									<input type="text" name="" id="" placeholder="Subject">
-									<textarea name="" id="" placeholder="Message"></textarea>
+								<form action="#">
+									<input type="text" name="name" id="name" placeholder="Name">
+									<input type="email" name="cemail" id="cemail" placeholder="Email">
+									<input type="text" name="subject" id="subject" placeholder="Subject">
+									<textarea name="msg" id="msg" placeholder="Message"></textarea>
 									<input type="submit" value="Send">
 								</form>
 							</div>
